fix text node whitespace rename localization wth jsx content wizard css

--- a/src/webapp-ui/src/Components/PageHost/index.scss
+++ b/src/webapp-ui/src/Components/PageHost/index.scss
@@ -1,7 +1,7 @@
 @import "../../themes/_vars";
 
 .page-host {
-    .content {
+    > .content {
         display: flex;
         flex-direction: column;
     }
