--- a/src/webapp-ui/src/components/Wizard/index.scss
+++ b/src/webapp-ui/src/components/Wizard/index.scss
@@ -19,6 +19,10 @@
                 color: $primary-color;
                 font-weight: bold;
             }
+
+            &:not(.completed):not(.active) {
+                opacity: 0.5;
+            }
         }
     }
 
